@@ -2,7 +2,7 @@ np=2
 stoptime=1.0
 [from]
   binary=/usr/local/bin/eventsource
-  args=5000 contiguous spikes
+  args=10 spikes
 [to]
   binary=/usr/local/bin/eventlogger
   from.out -> to.eventlog [5000]
