@@ -1,3 +1,11 @@
+2008-11-03  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* eventlogger.cc: Added better argument handling, including
+	options.
+
+	* events.music: Removed index map type argument (which is now an
+	option).
+
 2008-10-14  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* eventlogger.cc: Check that port is connected before mapping it.
